# Kodkod

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: delete-merged-branch-config.yml  pull_request_template.md
kodkod/pre_commit_hooks/: check_commit_message.py
